# mseedio

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: mseedviewer.rs
src/: data.rs  header.rs  lib.rs  record.rs  schema.rs  utils.rs
tests/: build.rs  parse.rs
tests/payloads/: mod.rs
