[package]
name = "mseedio"
version = "0.1.0"
edition = "2021"
authors = ["jt_yang <jt_yang@whu.edu.cn>"]
readme = "README.md"
license = "MIT"
rust-version = "1.65.0" # MSRV
keywords = ["miniseed", "seismology"]
description = "A library for reading and writing miniSEED files"
repository = "https://github.com/Daillusorisch/mseedio"
documentation = "https://docs.rs/mseedio"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
bitflags = { version = ">2.0", features = ["serde"] }
crc = { version = "3" }
log = "0.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }

# optional
chrono = { version = "0.4", default-features = false, features = ["clock", "now", "android-tzdata"], optional = true }

[dev-dependencies]
env_logger = ">=0.9.0"
clap = { version = ">=4.2.0" , features = ["derive"] }

[[example]]
name = "mseedviewer"

[features]
default = ["std", "chrono"]

chrono = ["dep:chrono"]

# default
std = ["serde/std", "serde_json/std", "anyhow/std", "chrono/std"]

# should be used in no_std environment
alloc = ["serde/alloc", "serde_json/alloc", "chrono/alloc"]

[profile.release]
lto = true
